[package]
name = "pask"
version = "0.1.0"
edition = "2021"
author = ["Ryan Cooper <ryan.dm.cooper@gmail.com>"]
readme = "README.md"
description = "A personal task manager command line application."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.2.15", features = ["derive"] }
csv = "1.1.6"
notify-rust = "4.5.8"
serde = { version = "1.0.142", features = ["derive"] }

