[package]
name = "pask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
crossterm = "0.25.0"
dirs = "4.0.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
