[package]
name = "pask"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A command line program for managing your tasks."
repository = "https://github.com/Ryandc20/pask"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
crossterm = "0.25.0"
dirs = "4.0.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tui = "0.19.0"
unicode-width = "0.1.10"
